--- a/TestingLab1.html
+++ b/TestingLab1.html
@@ -5,7 +5,7 @@
 <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-<p>&amp; Hello My name is Ahmed. I am not a fan of coding</p>
+<p>Hello My name is Ahmed. I am not a fan of coding</p>
 <p>I am majoring in ITM and Cybersecurity.</p>
 I speak 4 languages.
 </body>
